<resources>
    <string name="app_name" translatable="false">Joysale</string>
    <string name="facebook_app_id" translatable="false"></string>
    <string name="layout_direction" translatable="false">0</string>
    <string name="down" translatable="false">&#xf107;</string>
    <string name="file_provider_authority" translatable="false">com.hitasoft.app.joysale</string>
    <string name="Passwordfilter" translatable="false">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.$@#%-*:?!_,&amp;</string>
    <string name="Emailfilter" translatable="false">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.@-_</string>
    <string-array name="languages">
        <item>English</item>
    </string-array>
    <string-array name="languageCode" translatable="false">
        <item>en</item>
    </string-array>
    <string name="select_your_category">Select your category</string>
    <string name="please_fill">Please fill out this field</string>
    <string name="pleasewait">Just a moment</string>
    <string name="please_fill_all">You’ve to fill all the fields</string>
    <string name="add_your_stuff">Add Your Stuff</string>
    <string name="image_uploaded">Uploaded!</string>
    <string name="of">of</string>
    <string name="more_items_from">More items from</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="describe_your_listing">Describe your listing</string>
    <string name="enter_your_price">Enter your price</string>
    <string name="enter_valid_ship">Enter valid shipping</string>
    <string name="please_upload_image">Select at least one image</string>
    <string name="reqd_valid_price">Enter valid price</string>
    <string name="price">Price</string>
    <string name="selectcategory">Choose category</string>
    <string name="itemcondition">Product condition</string>
    <string name="set_your_location">Pin your location</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="exchangebuy">Exchange to Buy</string>
    <string name="fixedprice">Fixed Price</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="sorry">Sorry!</string>
    <string name="posting_list">Uploading..</string>
    <string name="successfully_posted">Product listed successfully</string>
    <string name="promote_listing">Promote your listing</string>
    <string name="choose_category">Categorize your listing</string>
    <string name="choose_condition">Choose product condition</string>
    <string name="price_should">Enter a valid price</string>
    <string name="your_product_not">Failed to upload. Try again later.</string>
    <string name="image_cannot">Failed to upload. Try again later.</string>
    <string name="image_uploading">Uploading..</string>
    <string name="noItem">No items found</string>
    <string name="noData">Try something else</string>
    <string name="camera_not_found">Camera not started</string>
    <string name="please_add_image">Select/Snap at least one image</string>
    <string name="please_select_images">Please select the images</string>
    <string name="your_device_doesnt_flash">No flash on your device</string>
    <string name="gallery">Gallery</string>
    <string name="next">NEXT</string>
    <string name="categories">Categories</string>
    <string name="changepassword">Change password</string>
    <string name="currentpassword">Current password</string>
    <string name="newpassword">New password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="wrongpassword">Incorrect Password</string>
    <string name="passwordmismatched">Passwords mismatch</string>
    <string name="passwordshould">Minimum six characters required</string>
    <string name="youroldandnew">Do not reuse your existing password!</string>
    <string name="symbols_not_supported">Sorry! Symbols not supported!</string>
    <string name="please_enter_message">Type your message</string>
    <string name="writemessage">Type something</string>
    <string name="comments">Comments</string>
    <string name="nocomments">No comments</string>
    <string name="please_give_comments">Leave a comment</string>
    <string name="exchangetobuy">Exchange to buy</string>
    <string name="create">Create</string>
    <string name="please_select_exchange">At least select one item</string>
    <string name="create_promotion">Promotion options</string>
    <string name="urgent">Urgent</string>
    <string name="advertisement">Advertisement</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="mark_as_available">Mark as Available</string>
    <string name="promote_your_product">Boost your ad</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="delete_product">Remove</string>
    <string name="mark_as_sold">Mark as sold</string>
    <string name="undo_report">Undo report</string>
    <string name="report_product">Report</string>
    <string name="somethingwrong">Something’s not right</string>
    <string name="edit_profile">Edit profile</string>
    <string name="reallySignOut">Are you sure to Signout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change">Change</string>
    <string name="your_changes_saved">Your changes have been saved!</string>
    <string name="Edit">Edit</string>
    <string name="Name">NAME</string>
    <string name="Username">USERNAME</string>
    <string name="Email">EMAIL</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="Phone">PHONE</string>
    <string name="link_your_account">Link your account</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="take">Take</string>
    <string name="retake">Retake</string>
    <string name="use_photo">Use Photo</string>
    <string name="please_take_snap">Please take a snap</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="myexchange">My Exchanges</string>
    <string name="exchange_status_chngd">Exchange status changed</string>
    <string name="gps_settings">GPS settings</string>
    <string name="gps_notenabled">GPS not enable. Go to settings?</string>
    <string name="settings">Settings</string>
    <string name="reallyExit">Exit now?</string>
    <string name="exit">Exit</string>
    <string name="keep">Keep</string>
    <string name="your_not_logged">Log in to proceed</string>
    <string name="login">Login</string>
    <string name="sell_your_stuff">Post your ad</string>
    <string name="chat">Chat</string>
    <string name="myprofile">My profile</string>
    <string name="help">Help</string>
    <string name="set_location">Set location</string>
    <string name="please_verify_mail">Verify your email</string>
    <string name="please_type_mail">Provide your email</string>
    <string name="please_type_password">Type your password</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forgot password?</string>
    <string name="signup_not_member">New user? Sign up</string>
    <string name="messages">Messages</string>
    <string name="noMessage">Nothing to display</string>
    <string name="my_promotions">My promotions</string>
    <string name="expired">Expired</string>
    <string name="notifications">Notifications</string>
    <string name="noNotification">No notifications yet</string>
    <string name="profile_problem">The process is temporarily disabled for this profile by admin. Try again later.</string>
    <string name="my_listing">My listings</string>
    <string name="liked">Liked</string>
    <string name="followers">Followers</string>
    <string name="followings">Following</string>
    <string name="pay_and_promote">Pay and Promote</string>
    <string name="please_select_promotion">Select your preferred promotion type</string>
    <string name="payment_error">Transaction failed due to server maintenance. Try later.</string>
    <string name="ok">OK</string>
    <string name="error">Error!</string>
    <string name="checkconnection">Check your network connection and try again</string>
    <string name="alert">Alert!</string>
    <string name="urgent_des">Promote your list for extended reach through premium placements and attract buyers easily </string>
    <string name="pay_and_highlight">Pay and highlight</string>
    <string name="Promotion_type">PROMOTION TYPE</string>
    <string name="Paid_amount">PAID AMOUNT</string>
    <string name="Transaction_id">TRANSACTION ID</string>
    <string name="up_to">UP TO</string>
    <string name="Status">STATUS</string>
    <string name="repromote_your_list">Repromote your list</string>
    <string name="register">Sign up</string>
    <string name="fullname">Full name</string>
    <string name="username">User name</string>
    <string name="already_member_login">Already a member? Login</string>
    <string name="filter">Filter</string>
    <string name="category_problem">Try again to retrieve category</string>
    <string name="Location">LOCATION</string>
    <string name="change_location">Change Location</string>
    <string name="Distance">DISTANCE</string>
    <string name="Categories">CATEGORIES</string>
    <string name="Posted_within">POSTED WITHIN</string>
    <string name="Sort_by">SORT BY</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="startmaking">Make money online by selling or buying used stuff near you</string>
    <string name="search">Search</string>
    <string name="addcomment">Post comment</string>
    <string name="signup">Sign up</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="network_error">Network error!</string>
    <string name="network_error_des">Make sure that you are connected to the internet</string>
    <string name="go_settings">Settings</string>
    <string name="world_wide">World Wide</string>
    <string name="promotion">Promotion</string>
    <string name="back_sale_confirmation">Mark as available?</string>
    <string name="sold_product_confirmation">Mark as sold?</string>
    <string name="delete_product_confirmation">Delete this product?</string>
    <string name="report_product_confirmation">Report this product?</string>
    <string name="undoreport_product_confirmation">Un Report?</string>
    <string name="type_your_offer">Your price?</string>
    <string name="type_your_message">Type your message</string>
    <string name="offer_should_not_above">Offer price should be less than the listing price</string>
    <string name="offer_should_not_zero">Enter a valid offer price</string>
    <string name="noFollowing">You’re not following anyone</string>
    <string name="noFollowers">No followers</string>
    <string name="ads_des">Promote your best products so they appear in the most relevant places. Set up targeting ads so the right people see your ad.</string>
    <string name="listing">Listings</string>
    <string name="need_permission_to_access">Ask for permission!</string>
    <string name="storage_permission_access">Storage access allowed</string>
    <string name="signin_des">Explore the world of products near you!</string>
    <string name="continue_with_email">Or continue with e-mail</string>
    <string name="facebook">Login via Facebook</string>
    <string name="twitter">Login via Twitter</string>
    <string name="googleplus">Login via Google</string>
</resources>