<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_roundcorner"
    android:layoutDirection="@string/layout_direction"
    android:orientation="vertical">

    <com.hitasoft.app.external.CustomTextView
        android:id="@+id/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/forgetpassword"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/primaryText"
        app:fonts="font_bold.ttf" />

    <com.hitasoft.app.external.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        app:fonts="font_regular.ttf" />

    <com.hitasoft.app.external.CustomEditText
        android:id="@+id/alert_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/editextbg"
        android:digits="@string/Emailfilter"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        app:fonts="font_regular.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.hitasoft.app.external.CustomTextView
            android:id="@+id/alert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/reset"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorPrimary"
            app:fonts="font_regular.ttf" />

        <com.hitasoft.app.external.CustomTextView
            android:id="@+id/alert_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/primaryText"
            app:fonts="font_regular.ttf" />
    </LinearLayout>


</LinearLayout>
