<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="@string/layout_direction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <com.hitasoft.app.external.CustomTextView
            android:id="@+id/alert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/network_error"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/primaryText"
            app:fonts="font_bold.ttf" />

        <com.hitasoft.app.external.CustomTextView
            android:id="@+id/alert_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/network_error_des"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/primaryText"
            app:fonts="font_regular.ttf" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <com.hitasoft.app.external.CustomTextView
                android:id="@+id/alert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/go_settings"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/colorPrimary"
                app:fonts="font_regular.ttf" />

            <com.hitasoft.app.external.CustomTextView
                android:id="@+id/alert_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingBottom="20dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/primaryText"
                app:fonts="font_regular.ttf" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
