<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/back"
            android:tint="@color/colorSecondary"
            android:visibility="visible" />

        <com.hitasoft.app.external.CustomTextView
            android:id="@+id/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/forgetpassword"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:fonts="font_regular.ttf" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_bar"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layoutDirection="@string/layout_direction"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.hitasoft.app.external.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/primaryText"
                    android:textSize="34sp"
                    app:fonts="font_bold.ttf" />

                <com.hitasoft.app.external.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/signin_des"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"
                    app:fonts="font_regular.ttf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.hitasoft.app.external.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/email"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    app:fonts="font_regular.ttf" />

                <com.hitasoft.app.external.CustomEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/editextbg"
                    android:digits="@string/Emailfilter"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    app:fonts="font_regular.ttf" />

                <com.hitasoft.app.external.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/password"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    app:fonts="font_regular.ttf" />

                <com.hitasoft.app.external.CustomEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/editextbg"
                    android:digits="@string/Passwordfilter"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    app:fonts="font_regular.ttf" />

                <com.hitasoft.app.external.CustomTextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_corner_primary"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:fonts="font_bold.ttf" />

                <com.hitasoft.app.external.CustomTextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/primary_bg_corner"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/signup_not_member"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:fonts="font_bold.ttf" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
